Fix an issue where the height of the hero image on the homepage is too small to fit the content on small screens

--- a/public/css/page_home.scss
+++ b/public/css/page_home.scss
@@ -10,7 +10,7 @@
   background-size: cover;
   background-position: bottom center;
   min-height: 400px;
-  height: 100vh;
+  min-height: 100vh;
   max-height: 700px;
 }
 
